mylife: smoother achievements spacing (fixes #7996) (#7997)

--- a/src/app/users/users-achievements/users-achievements.scss
+++ b/src/app/users/users-achievements/users-achievements.scss
@@ -78,6 +78,7 @@
         grid-area: txt;
         display: flex;
         align-items: center;
+        max-width: 75%;
       }
 
       .achievement-date {
@@ -92,6 +93,10 @@
         margin-right: 0;
       }
     }
+  }
+
+  .link-title {
+    max-width: 75%;
   }
 
   .styled-link {
